# software

./: CMakeLists.txt  README.md
config/nightowl/: nightowl.cfg
server/: app.js  renderview.js
server/views/: app.js  detection.html  header.html  intro.html
src/audiostream/: AudioStreamPulseAudio.hpp  AudioStreamPulseAudioTest.cpp
src/camera/: Camera.hpp  WebCam.cpp  WebCam.hpp
src/configuration/: Configuration.hpp
src/imageproc/: BackgroundSubtractor.cpp  BackgroundSubtractor.hpp  ContourExtractor.hpp  MotionDetector.cpp  MotionDetector.hpp
src/nightowl/: Nightowl.cpp  Nightowl.hpp  NightowlTest.cpp
src/wav/: WavReader.cpp  WavReader.hpp  WavReaderTest.cpp
wav/: WavReader.cpp  WavReader.hpp  WavReaderTest.cpp
